--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
   },
   "homepage": "https://github.com/jarofghosts/get-parent-dir#readme",
   "devDependencies": {
+    "eslint": "^1.5.1",
+    "eslint-config-standard": "^4.4.0",
+    "eslint-plugin-standard": "^1.3.1",
+    "standard": "^5.3.1",
     "tape": "^4.0.0"
+  },
+  "dependencies": {
+    "utils-fs-exists": "^1.0.1"
   }
 }
